    revision no longer render the local metadata copy unusable.

  * Google storage bucket names containing dots no longer cause
    problems with SSL certificate validation.

  * Fixed crash when statvfs() is called on an almost empty file
    system (which may happen automatically when using some desktop
    environments, resulting in an immediate crash after mounting an
    empty filesystem).
  
2013-07-18, S3QL 2.3

  * Reading the file system passphrase from the authinfo2 file
    is now working again.

  * The precedence of the authinfo2 sections has been fixed to agree
    with the documentation: later entries override earlier entries
    rather than the other way around.

  * Fixed a problem with mount.s3ql not recognizing the upgraded
    revision when `s3qladm upgrade` was run with a different
    --cachedir argument.

  * Fixed a crash of the s3 backend when multiple objects are deleted
    and the s3 connection needs to be re-established.

2013-07-12, S3QL 2.2

  * Eliminated a race condition that resulted in an apparent loss of
    remote metadata when the mount.s3ql process was interrupted after
    renaming the remote metadata but before having completely uploaded
    the local metadata.

  * Attempting to run mount.s3ql with --allow-user but without having
    the necessary permissions no longer results in the file system
    being marked as needing fsck.

  * The S3 backend now deletes multiple storage objects using one
    request if possible, reducing latency, traffic and number of
    requests to S3.

  * S3QL is now able to detect server errors and redirections before
    all data has been sent to the server. This avoids pointless data
    transfers and should fix a problem with S3QL operating very slow
    when operating on recently created storage buckets/containers.

  * There is a new 'rackspace' backend that allows specification of
    the object storage region in the storage URL. The rackspace